uhppoted/REST: Implements set-time
